add sanity ignore files, module doc companions and codespell

--- a/roles/sap_hana_backint/templates/hdbbackint_ibm_cos_s3.j2
+++ b/roles/sap_hana_backint/templates/hdbbackint_ibm_cos_s3.j2
@@ -6,7 +6,7 @@ provider = ibm
 auth = key
 bucket = {{ sap_hana_backint_ibm_cos_s3_definition['bucket'] }}
 region = {{ sap_hana_backint_ibm_cos_s3_definition['region'] }}
-# Mandatory 3 parameters for IBM COS, endpoint is dependant on bucket location
+# Mandatory 3 parameters for IBM COS, endpoint is dependent on bucket location
 api_key = {{ sap_hana_backint_ibm_cos_s3_definition['api_key'] }}
 resource_instance_id = {{ sap_hana_backint_ibm_cos_s3_definition['resource_instance_id'] }}
 endpoint_url = {{ sap_hana_backint_ibm_cos_s3_definition['endpoint_url'] }}
